@@ -1,7 +1,9 @@
 This is functionality test suite for Gnuk.
 
-You need python-nose, python-freshen, and python-crypto as well as
-python-usb.
+You need python-nose, python-freshen as well as python-usb.
+
+Besides, python-crypto is needed when you use generate_keys.py to
+update *.key.
 
 
 Type:
