@@ -1,7 +1,9 @@
-from binascii import unhexlify
+from binascii import hexlify, unhexlify
 from time import time
 from struct import pack
-from hashlib import sha1
+from hashlib import sha1, sha256
+import string
+from os import urandom
 
 def read_key_from_file(file):
     f = open(file)
@@ -16,7 +18,7 @@ def read_key_from_file(file):
     n = int(n_str, 16)
     if n != p * q:
         raise ValueError("wrong key", p, q, n)
-    return (unhexlify(n_str), unhexlify(e_str), unhexlify(p_str), unhexlify(q_str))
+    return (unhexlify(n_str), unhexlify(e_str), unhexlify(p_str), unhexlify(q_str), e, p, q, n)
 
 def calc_fpr(n,e):
     timestamp = int(time())
@@ -69,3 +71,69 @@ def build_privkey_template_for_remove(openpgp_keyno):
     else:
         keyspec = '\xa4'
     return '\x4d\02' + keyspec + '\0x00'
+
+def compute_digestinfo(msg):
+    digest = sha256(msg).digest()
+    prefix = '\x30\31\x30\x0d\x06\x09\x60\x86\x48\x01\x65\x03\x04\x02\x01\x05\x00\x04\x20'
+    return prefix + digest
+
+# egcd and modinv are from wikibooks
+# https://en.wikibooks.org/wiki/Algorithm_Implementation/Mathematics/Extended_Euclidean_algorithm
+
+def egcd(a, b):
+    if a == 0:
+        return (b, 0, 1)
+    else:
+        g, y, x = egcd(b % a, a)
+        return (g, x - (b // a) * y, y)
+
+def modinv(a, m):
+    g, x, y = egcd(a, m)
+    if g != 1:
+        raise Exception('modular inverse does not exist')
+    else:
+        return x % m
+
+def pkcs1_pad_for_sign(digestinfo):
+    byte_repr = '\x00' + '\x01' + string.ljust('', 256 - 19 - 32 - 3, '\xff') \
+        + '\x00' + digestinfo
+    return int(hexlify(byte_repr), 16)
+
+def pkcs1_pad(msg):
+    padlen = 256 - 3 - len(msg)
+    byte_repr = '\x00' + '\x02' \
+        + string.replace(urandom(padlen),'\x00','\x01') + '\x00' + msg
+    return int(hexlify(byte_repr), 16)
+
+def compute_signature(keyno, digestinfo):
+    e = key[keyno][4]
+    p = key[keyno][5]
+    q = key[keyno][6]
+    n = key[keyno][7]
+    p1 = p - 1
+    q1 = q - 1
+    h = p1 * q1
+    d = modinv(e, h)
+    dp = d % p1
+    dq = d % q1
+    qp = modinv(q, p)
+
+    input = pkcs1_pad_for_sign(digestinfo)
+    t1 = pow(input, dp, p)
+    t2 = pow(input, dq, q)
+    t = ((t1 - t2) * qp) % p
+    sig = t2 + t * q
+    return sig
+
+def integer_to_bytes(i):
+    s = hex(i)[2:]
+    s = s.rstrip('L')
+    if len(s) & 1:
+        s = '0' + s
+    return unhexlify(s)
+
+def encrypt(keyno, plaintext):
+    e = key[keyno][4]
+    n = key[keyno][7]
+    m = pkcs1_pad(plaintext)
+    return '\x00' + integer_to_bytes(pow(m, e, n))
